# turtlebot3_localization_project

./: CMakeLists.txt  README.md  README.txt  commands.txt  kf_prediction.csv  odom.csv  package.xml  prediction.csv
include/turtlebot3_localization/: extended_kalman_filter.hpp  kf.hpp  particle_filter.hpp
install/: local_setup.sh  setup.sh
install/particle_filter_node/lib/particle_filter_node/: pattern_node  waypoint_navigator  waypoint_navigator_node
install/particle_filter_node/share/ament_index/resource_index/package_run_dependencies/: particle_filter_node
install/particle_filter_node/share/particle_filter_node/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/particle_filter_node/share/particle_filter_node/cmake/: particle_filter_nodeConfig.cmake
install/particle_filter_node/share/particle_filter_node/config/: filter_params.yaml
install/particle_filter_node/share/particle_filter_node/config/config/: waypoints.yaml
install/particle_filter_node/share/particle_filter_node/launch/: start.launch.py
install/turtlebot3_localization/include/turtlebot3_localization/: ekf.hpp  kalman_filter.hpp
install/turtlebot3_localization/lib/turtlebot3_localization/: kf_node
install/turtlebot3_localization/share/ament_index/resource_index/package_run_dependencies/: turtlebot3_localization
install/turtlebot3_localization/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_localization
install/turtlebot3_localization/share/turtlebot3_localization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/turtlebot3_localization/share/turtlebot3_localization/cmake/: turtlebot3_localizationConfig-version.cmake  turtlebot3_localizationConfig.cmake
install/turtlebot3_localization/share/turtlebot3_localization/environment/: ament_prefix_path.dsv  path.dsv
install/turtlebot3_localization/share/turtlebot3_localization/launch/: ekf.launch.py  kalman_filter_test.launch.py  start_kf.launch.py  start_sim_with_nav2.launch.py
launch/: start.launch.py  start_kf.launch.py  start_sim.launch.py  start_sim_with_nav2.launch.py  waypoints.launch.py
log/: latest_build
maps/: map.yaml
plot/: RMSE.py  ekf.csv  extract_from_bag.py  kf_prediction.csv  odom.csv  prediction.csv
plot/install/: local_setup.sh  setup.sh
plot/log/: latest_build
robust/: compare_robustness.py  pf_bad.yaml
rosbag2_2025_06_30-01_41_28/: metadata.yaml
rosbag2_2025_06_30-18_17_31/: metadata.yaml
rosbag2_2025_06_30-18_57_49/: metadata.yaml
rosbag2_2025_06_30-19_03_36/: metadata.yaml
rosbag2_2025_06_30-19_10_11/: metadata.yaml
rosbag2_2025_06_30-19_18_40/: metadata.yaml
rosbag2_2025_06_30-19_22_53/: metadata.yaml
rosbag2_2025_06_30-19_25_23/: metadata.yaml
rosbag2_2025_06_30-19_39_47/: metadata.yaml
rosbag2_2025_06_30-19_46_54/: metadata.yaml
rosbag2_2025_06_30-20_00_10/: metadata.yaml
rosbag2_2025_07_01-16_19_22/: metadata.yaml
rosbag2_2025_07_01-16_21_32/: metadata.yaml
rosbag2_2025_07_01-16_24_31/: metadata.yaml  rosbag2_2025_07_01-16_24_31_0.mcap
rosbag2_2025_07_01-16_25_02/: metadata.yaml
rosbag2_2025_07_01-16_46_12/: metadata.yaml
rosbag2_2025_07_01-16_51_55/: metadata.yaml
rosbag2_2025_07_01-16_53_47/: metadata.yaml
rosbag2_2025_07_01-17_14_18/: metadata.yaml
rosbag2_2025_07_01-17_36_50/: metadata.yaml
rosbag2_2025_07_01-17_41_20/: metadata.yaml
rosbag2_2025_07_01-17_49_30/: metadata.yaml
rosbag2_2025_07_01-17_50_58/: metadata.yaml
rosbag2_2025_07_01-17_52_32/: metadata.yaml
rosbag2_2025_07_01-17_54_56/: metadata.yaml
rosbag2_2025_07_01-17_58_02/: metadata.yaml
rosbag2_2025_07_04-14_16_41/: metadata.yaml
rosbag2_2025_07_04-14_21_39/: metadata.yaml  rosbag2_2025_07_04-14_21_39_0.mcap
rosbag2_2025_07_04-14_25_05/: metadata.yaml
rosbag2_2025_07_04-14_25_52/: metadata.yaml  rosbag2_2025_07_04-14_25_52_0.mcap
rviz/: robot_view.rviz  rviz_config.rviz
src/: ekf.cpp  ekf_node.cpp  extended_kalman_filter.cpp  kalman_filter.cpp  kf.cpp  kf_node.cpp  kf_test.cpp  main_filter_node.cpp  particle_filter.cpp  pattern.cpp  pf.cpp  waypoint_navigator.cpp  waypoint_publisher.cpp  waypoint_sender.cpp
src/config/: waypoints.yaml
urdf/: custom_turtlebot.urdf.xacro
