<?xml version="1.0"?>
<package format="3">
  <name>particle_filter_node</name>
  <version>0.1.0</version>
  <description>Localization using Particle, Kalman, and EKF filters, plus pattern movement</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <build_depend>Eigen3</build_depend>
  <exec_depend>Eigen3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
